Update image dimensions

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="site-wrapper">
         <div class="header">
-            <img class="image" src="assets/pranav.jpg" alt="Pranav Srinivasan Picture" width="300" height="a">
+            <img class="image" src="assets/pranav.jpg" alt="Pranav Srinivasan Picture" width="300" height="400">
             <div class="title">
                 <h1>Pranav Srinivasan</h1>
                 <p>I love developing software,<br /> study computer engineering at UCLA,<br /> and enjoy a good
