Add more sections to website

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
                 <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/pranavsankars/">LinkedIn</a>
                 <a target="_blank" rel="noopener noreferrer" href="assets/resume.pdf">Resume</a>
                 <a target="_blank" rel="noopener noreferrer" href="https://github.com/pranavs2001">GitHub</a>
+                <a href="side-projects.html">Side Projects</a>
                 <a target="_blank" rel="noopener noreferrer" href="https://open.spotify.com/user/pranavs2001?si=IcdG--W4TIWcW2DWjXoPDw">Music</a>
                 <a href="cool-stuff.html">Cool Stuff</a>
-                <a href="captivating.html">Captivating</a>
+                <a target="_blank" rel="noopener noreferrer" href="https://www.simivalleyacorn.com/articles/teens-help-build-scaled-down-replica-of-mars-rover/">A Bit of Recognition</a>
+                <!--<a href="captivating.html">Captivating</a>-->
             </div>
         </div>
     </div>
