--- a/cool-stuff.html
+++ b/cool-stuff.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Pranav Srinivasan</title>
+    <title>Pranav Srinivasan - Cool Stuff</title>
     <!-- Title shows up on the bar. Not on the page itself -->
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre" rel="stylesheet">
@@ -31,7 +31,16 @@
         <ul>
             <li><a target="_blank" rel="noopener noreferrer" href="https://patrickcollison.com/">Patrick Collison's Website</a></li>
         </ul>
-        <h1>Basketball</h1>
+        <h1>Travel</h1>
+        <h1>Restaurant Recommendations</h1>
+        <ul>
+            <li>Kasi Villas - Thiruneveli, India</li>
+            <li>Dave's Hot Chicken - East Hollywood, CA</li>
+            <li>Aachi Appakadai - Sunnyvale, CA</li>
+            <li>Rich and Richer - Simi Valley, CA</li>
+                
+        </ul>
+        <h1>Memories</h1>
 
 
     </div>
