Fill out website with more content and animations

--- a/captivating.html
+++ b/captivating.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Pranav Srinivasan</title>
+    <title>Pranav Srinivasan - Captivating</title>
     <!-- Title shows up on the bar. Not on the page itself -->
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre" rel="stylesheet">
