--- a/cool-stuff.html
+++ b/cool-stuff.html
@@ -31,7 +31,15 @@
         <ul>
             <li><a target="_blank" rel="noopener noreferrer" href="https://patrickcollison.com/">Patrick Collison's Website</a></li>
         </ul>
-        <h1>Travel</h1>
+        <h1>Travel Bucket List
+        <ul>
+            <li>NYC</li>
+            <li>Berlin</li>
+            <li>Sydney</li>
+            <li></li>
+                    
+        </ul>
+        </h1>
         <h1>Restaurant Recommendations</h1>
         <ul>
             <li>Kasi Villas - Thiruneveli, India</li>
@@ -44,6 +52,7 @@
 
 
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
