--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Pranav Srinivasan</title>
     <!-- Title shows up on the bar. Not on the page itself -->
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@500;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -14,8 +15,7 @@
             <img class="image" src="assets/pranav.jpg" alt="Pranav Srinivasan Picture" width="300" height="400">
             <div class="title">
                 <h1>Pranav Srinivasan</h1>
-                <p>I love developing software,<br /> study computer engineering at UCLA,<br /> and enjoy a good
-                    cheeseburger.</p>
+                <p>I love developing software,<br /> study computer engineering at UCLA,<br /> and enjoy a good cheeseburger.</p>
                 <a href="mailto:pranavsankars@g.ucla.edu?subject=What's Up?">Email</a>
                 <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/pranavsankars/">LinkedIn</a>
                 <a target="_blank" rel="noopener noreferrer" href="assets/resume.pdf">Resume</a>
@@ -28,6 +28,10 @@
             </div>
         </div>
     </div>
+    <!--testing-->
+    
+    <!--End of testing-->
+    <script src="script.js"></script>
 </body>
 
 </html>
