--- a/side-projects.html
+++ b/side-projects.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Pranav Srinivasan</title>
+    <title>Pranav Srinivasan - Side Projects</title>
     <!-- Title shows up on the bar. Not on the page itself -->
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre" rel="stylesheet">
@@ -13,6 +13,7 @@
         <h1>Bruin Dining</h1>
         <h1>Electric Skateboard from Scratch</h1>
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
