Push to fix previous errors

--- a/cool-stuff.html
+++ b/cool-stuff.html
@@ -31,7 +31,7 @@
         <ul>
             <li><a target="_blank" rel="noopener noreferrer" href="https://patrickcollison.com/">Patrick Collison's Website</a></li>
         </ul>
-        <h1>Travel Bucket List
+        <h1>Travel Bucket List</h1>
         <ul>
             <li>NYC</li>
             <li>Berlin</li>
