Add gradient background

--- a/cool-stuff.html
+++ b/cool-stuff.html
@@ -36,7 +36,7 @@
             <li>NYC</li>
             <li>Berlin</li>
             <li>Sydney</li>
-            <li></li>
+            <li>London</li>
                     
         </ul>
         </h1>
