Remove gradient because it needs to be fixed for Safari users

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Pranav Srinivasan</title>
     <!-- Title shows up on the bar. Not on the page itself -->
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@500;900&display=swap" rel="stylesheet">
@@ -12,9 +13,10 @@
 <body>
     <div class="site-wrapper">
         <div class="header">
-            <img class="image" src="assets/pranav.jpg" alt="Pranav Srinivasan Picture" width="300" height="400">
+            <img class="image" src="assets/pranav.jpg" alt="Picture of Pranav Srinivasan" width="300" height="400">
             <div class="title">
-                <h1>Pranav Srinivasan</h1>
+                <h1 alt="Pranav Srinivasan">Pranav Srinivasan</h1>
+                <!--<h1 alt="Pranav Srinivasan. Next line is name in Tamil">Pranav Srinivasan<br/>பிரணவ் சீனிவாசன்</h1>-->
                 <p>I love developing software,<br /> study computer engineering at UCLA,<br /> and enjoy a good cheeseburger.</p>
                 <a href="mailto:pranavsankars@g.ucla.edu?subject=What's Up?">Email</a>
                 <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/pranavsankars/">LinkedIn</a>
@@ -26,6 +28,16 @@
                 <a target="_blank" rel="noopener noreferrer" href="https://www.simivalleyacorn.com/articles/teens-help-build-scaled-down-replica-of-mars-rover/">A Bit of Recognition</a>
                 <!--<a href="captivating.html">Captivating</a>-->
             </div>
+        </div>
+
+        <div class="filler">
+            <h1>Filler</h1>
+            <h1>Filler</h1>
+            <h1>Filler</h1>
+            <h1>Filler</h1>
+            <h1>Filler</h1>
+            <h1>Filler</h1>
+            <h1>Filler</h1>
         </div>
     </div>
     <!--testing-->
