--- a/side-projects.html
+++ b/side-projects.html
@@ -9,10 +9,21 @@
 </head>
 
 <body>
-    <div class="site-wrapper">
+        <h1>WORK IN PROGRESS</h1>
         <h1>Bruin Dining</h1>
         <h1>Electric Skateboard from Scratch</h1>
-    </div>
+        <h1>Filler</h1>
+        <h1>Filler</h1>
+        <h1>Filler</h1>
+        <h1>Filler</h1>
+        <h1>Filler</h1>
+        <h1>Filler</h1>
+        <h1>Filler</h1>
+        <h1></h1>
+        <h1></h1>
+        <h1></h1>
+        <h1></h1>
+        <h1></h1><h1></h1><h1></h1><h1></h1>
     <script src="script.js"></script>
 </body>
 
