Flush out Side Projects page

--- a/cool-stuff.html
+++ b/cool-stuff.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="site-wrapper">
+    <div class="subpage-wrapper">
         <h1>Wisdom to Live By</h1>
         <ul>
             <li>"Whatever you do in life, surround yourself with smart people who'll argue with you" - John Wooden</li>
@@ -30,6 +30,7 @@
         <h1>Internet Gems</h1>
         <ul>
             <li><a target="_blank" rel="noopener noreferrer" href="https://patrickcollison.com/">Patrick Collison's Website</a></li>
+            <li><a target="_blank" rel="noopener noreferrer" href="https://www.allsides.com">AllSides</a></li>
         </ul>
         <h1>Travel Bucket List</h1>
         <ul>
@@ -42,13 +43,13 @@
         </h1>
         <h1>Restaurant Recommendations</h1>
         <ul>
-            <li>Kasi Villas - Thiruneveli, India</li>
             <li>Dave's Hot Chicken - East Hollywood, CA</li>
+            <li>Kasi Villas - Thiruneveli, India</li>
             <li>Aachi Appakadai - Sunnyvale, CA</li>
             <li>Rich and Richer - Simi Valley, CA</li>
                 
         </ul>
-        <h1>Memories</h1>
+        <!--<h1>Memories</h1>-->
 
 
     </div>
