--- a/side-projects.html
+++ b/side-projects.html
@@ -9,21 +9,32 @@
 </head>
 
 <body>
-        <h1>WORK IN PROGRESS</h1>
-        <h1>Bruin Dining</h1>
+        <div class="subpage-wrapper">
+        <h1>Bruin Dining Mobile App</h1>
+        <h3>July 2020 - Present</h3>
+        <img class="image" src="assets/bruin-dining-launch.png" alt="Picture of Pranav Srinivasan and Friend Working on Skateboard" width="200" height="400">
+        <p>I am currently developing an mobile application that displays the UCLA Dining Hall menus in a user-friendly mobile app. I am currently exploring different methods of <br/>
+            retrieving the data that needs to be displayed which includes using an existing API or web scraping the website for relevant data.</p>
+            <!-- Unfortunately, Covid-19 has made completing this application more challenging as all the UCLA Dining Halls are not open and so the API naturally-->
+        <h1>Power Shower</h1>
+        <h3>IDEA Hacks 2020</h3>
+        <img class="image" src="assets/idea-hacks-finish.JPG" alt="Power Shower Team Posing with Finished Prototype" width="500" height="400">
+        <img class="image" src="assets/idea-hacks-progress.jpg" alt="Power Shower Prototype in Development" width="300" height="400">
+        <p>I joined my friends to participate in IDEA Hacks, the largest hardware hackathon on the West Coast. I ideated and worked with my teammates to create Power Shower, <br/>
+            an IoT hub that encourages college students to conserve water usage when taking showers in dorms. Power Shower helps students monitor how long they spend in showers <br/>
+            and encourages them to decrease their water consumption using a mobile app. We were fortunate enough to be awarded the runner-ups for the Sustainability category of <br/>
+            the hackathon.</p>
         <h1>Electric Skateboard from Scratch</h1>
-        <h1>Filler</h1>
-        <h1>Filler</h1>
-        <h1>Filler</h1>
-        <h1>Filler</h1>
-        <h1>Filler</h1>
-        <h1>Filler</h1>
-        <h1>Filler</h1>
-        <h1></h1>
-        <h1></h1>
-        <h1></h1>
-        <h1></h1>
-        <h1></h1><h1></h1><h1></h1><h1></h1>
+        <h3>January 2019 - May 2019</h3>
+        <img class="image" src="assets/pranav-skateboard.jpg" alt="Picture of Pranav Srinivasan with Electric Skateboard" width="300" height="400">
+        <img class="image" src="assets/skateboard.jpg" alt="Picture of Electric Skateboard" width="500" height="400">
+        <img class="image" src="assets/skateboard-progress.jpg" alt="Picture of Pranav Srinivasan and Friend Working on Skateboard" width="300" height="400">
+        <p>Electric skateboards are fun but they're rather expensive. In my senior year of high school, I worked with a friend to create a cost-efficient electric skateboard.<br/> 
+            We learned to use machine shop tools such as band saws and scroll saws to carve out our own deck from a slab of wood. The skateboard has a single brushless <br/> 
+            motor wired to a microcontroller which was able to communicate with a remote controller. The skateboard has a top speed of about 15-20 mph based on the weight <br/>
+            of the rider. The final price of our skateboard was about $300 which is pretty good considering similar reliable products we didn't wholesale purchase our parts <br/>
+            and similar products on the market generally go for above $500.</p>
+        </div>
     <script src="script.js"></script>
 </body>
 
