Add more content on cool-stuff page

--- a/cool-stuff.html
+++ b/cool-stuff.html
@@ -13,17 +13,20 @@
         <h1>Wisdom to Live By</h1>
         <ul>
             <li>"Whatever you do in life, surround yourself with smart people who'll argue with you" - John Wooden</li>
+            <li>"The beginnings of all things are small" - Marcus Tullius Cicero</li>
             <li><a target="_blank" rel="noopener noreferrer" href="http://www.coachwooden.com/pyramid-of-success#Pyramid">John Wooden's Pyramid of Success</a></li>
         </ul>
         <h1>Books</h1>
         <ul>
-            <li>The Martian by Andy Weir</li>
-            <li>Little Book of Common Sense Investing by John Bogle</li>
-            <li>The Magic by Rhonda Byrne</li>
+            <li>The Martian - Andy Weir</li>
+            <li>Little Book of Common Sense Investing - John Bogle</li>
+            <li>The Magic - Rhonda Byrne</li>
+            <li>Behind the Beautiful Forevers: Life, Death, and Hope in a Mumbai Undercity - Katherine Boo</li>
         </ul>
         <h1>Podcasts</h1>
         <ul>
             <li>How to Money</li>
+            <li>Rationally Speaking Podcast</li>
             <li>The No Dunks Podcast</li>
             <li>The Lakers Exceptionalism Podcast</li>
         </ul>
@@ -31,6 +34,8 @@
         <ul>
             <li><a target="_blank" rel="noopener noreferrer" href="https://patrickcollison.com/">Patrick Collison's Website</a></li>
             <li><a target="_blank" rel="noopener noreferrer" href="https://www.allsides.com">AllSides</a></li>
+            <!--<li><a target="_blank" rel="noopener noreferrer" href="https://www.socialcooling.com">Social Cooling</li>
+            <li><a target="_blank" rel="noopener noreferrer" href="https://www.mathwashing.com">Math Washing</li>-->
         </ul>
         <h1>Travel Bucket List</h1>
         <ul>
