--- a/side-projects.html
+++ b/side-projects.html
@@ -10,6 +10,11 @@
 
 <body>
         <div class="subpage-wrapper">
+        <h1>DisCovr</h1>
+        <h3>October 2020 - December 2020</h3>
+        <img class="image" src="assets/discovr.png" alt="Picture of DisCovr web application" width="200" height="400">
+        <p>I worked with a friend to create a web application that enables Spotify users to find random songs and discover new music they would have otherwise never have been <br/>
+            recommended. We used Node.js (Express) on the back-end and Bootstrap on the front-end to create a responsive user interface!</p>
         <h1>Bruin Dining Mobile App</h1>
         <h3>July 2020 - Present</h3>
         <img class="image" src="assets/bruin-dining-launch.png" alt="Picture of Pranav Srinivasan and Friend Working on Skateboard" width="200" height="400">
