Add book to list

--- a/cool-stuff.html
+++ b/cool-stuff.html
@@ -18,6 +18,7 @@
         </ul>
         <h1>Books</h1>
         <ul>
+            <li>Moneyball: The Art of Winning an Unfair Game - Michael Lewis</li>
             <li>The Martian - Andy Weir</li>
             <li>Little Book of Common Sense Investing - John Bogle</li>
             <li>The Magic - Rhonda Byrne</li>
