Update Podcast section

--- a/cool-stuff.html
+++ b/cool-stuff.html
@@ -27,8 +27,8 @@
         <h1>Podcasts</h1>
         <ul>
             <li>How to Money</li>
-            <li>Rationally Speaking Podcast</li>
-            <li>The No Dunks Podcast</li>
+            <li>Rationally Speaking</li>
+            <li>No Dunks Podcast</li>
             <li>The Lakers Exceptionalism Podcast</li>
         </ul>
         <h1>Internet Gems</h1>
