--- a/cool-stuff.html
+++ b/cool-stuff.html
@@ -50,7 +50,7 @@
         <h1>Restaurant Recommendations</h1>
         <ul>
             <li>Dave's Hot Chicken - East Hollywood, CA</li>
-            <li>Kasi Villas - Thiruneveli, India</li>
+            <li>Hotel Kasi Vilas - Tirunelveli, India</li>
             <li>Aachi Appakadai - Sunnyvale, CA</li>
             <li>Rich and Richer - Simi Valley, CA</li>
                 
